--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ img{
     border-radius: 5px;
     align-items: center;
     font-size: 20px;
+    border: 1px solid #aaa9a9;
 }
 
 .btn-primary span{
@@ -206,9 +207,77 @@ footer ul li a{
    Responsive Css start
 -----------------------------*/
 
-@media screen {
+
+/* Mobile devices css start */
+
+@media screen and (max-width: 688px) {
+    .container{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+    .banner-content{
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        text-align: center;
+    }
+    .match-content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .content-left{
+        background: white;
+    }
+    .content-right{
+        grid-template-columns: repeat(1, 1fr);
+        align-items: center;
+        text-align: center;
+    }
+    footer ul{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
     
 }
+
+/* Mobile devices css end */
+
+/* Tablet Devices css start */
+
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+    #magic-btn{
+        display: inline-block;
+    }
+    .match-content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .content-left{
+        background: white;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: 100%;
+    }
+    .content-left a{
+        padding: 5px;
+        margin: 30px 10px;
+    }
+    .content-right{
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        text-align: center;
+    }
+   
+    footer ul{
+        flex-wrap: wrap;
+        
+    }
+}
+/* tablet devices css end */
 
 
 /* -------------------------
