--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img{
     border-radius: 20px;
 }
 .banner-info{
-    padding-left: 70px;
+    padding: 0 70px;
     padding-top: 10px;
     padding-bottom: 50px;
     margin-right: 10px;
